# Fiszki

./: CMakeLists.txt  Card.cpp  Card.h  CardDTO.h  Collection.cpp  Collection.h  Game.cpp  Game.h  Jenkinsfile  Player.cpp  Player.h
src/: CMakeLists.txt  main.cpp
src/fiszki/: Card.cpp  Card.h  CardSession.cpp  CardSession.h  Collection.cpp  Collection.h  Data.cpp  Game.cpp  Game.h  Session.cpp  Session.h
src/sqlite3/: CMakeLists.txt  sqlite_orm.h
tests/: CMakeLists.txt  main_test.cpp
tests/fiszki/: sample_tests.cpp
